# taolk

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  codecov.yml
.github/workflows/: ci.yml  coverage.yml  release.yml
docs/: cli.md  sdk.md  tui.md
migrations/: 2026-04-07_chain_scoped_database.md
scripts/: ui_tripwire.sh
src/: app.rs  audio.rs  chain.rs  chain_cache.rs  cli_fmt.rs  config.rs  conversation.rs  db.rs  error.rs  event.rs  extrinsic.rs  lib.rs  main.rs  metadata.rs  migrations.rs  mirror.rs  reader.rs  secret.rs  session.rs  types.rs  util.rs  wallet.rs
src/audio/: mod.rs
src/cmd/: config.rs  db.rs  mod.rs  registry.rs  wallet.rs
src/migrations/: m20260407_chain_scoped_database.rs  mod.rs
src/ui/: chat_list.rs  chrome.rs  composer.rs  help.rs  hintbar.rs  icons.rs  input.rs  messages.rs  mod.rs  modal.rs  palette.rs  sidebar.rs  status.rs  statusline.rs  symbols.rs  theme.rs  timeline.rs  welcome.rs
src/ui/overlay/: help.rs  jump.rs  mod.rs  palette.rs
tests/: adversarial.rs  app_state.rs  chat_flow.rs  compile_fail.rs  config.rs  conversation.rs  db.rs  error.rs  extrinsic.rs  metadata.rs  numeric.rs  reader.rs  secret.rs  session.rs  session_build.rs  session_channels.rs  session_groups.rs  session_inbox.rs  types.rs  util.rs  wallet.rs
tests/common/: mod.rs
tests/compile_fail/: README.md  password_display.rs  password_display.stderr  seed_clone.rs  seed_clone.stderr  seed_debug.rs  seed_debug.stderr  signing_key_clone.rs  signing_key_clone.stderr
