[package]
name = "taolk"
version = "2.0.0"
edition = "2024"
license = "MIT"
description = "Encrypted messaging client for Bittensor"
repository = "https://github.com/mcjkula/taolk"

[features]
default = ["tui"]
tui = ["dep:ratatui", "dep:crossterm", "dep:rpassword", "dep:clap", "dep:rodio"]

[[bin]]
name = "taolk"
required-features = ["tui"]

[profile.release]
lto = true
strip = true
codegen-units = 1

[dependencies]
samp = { path = "../../../skilaboo/rust" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "net", "time", "io-util"] }
schnorrkel = "0.11"
hkdf = "0.12"
sha2 = "0.10"
chacha20poly1305 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
futures-util = "0.3"
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
chrono = "0.4"
blake2 = "0.10"
getrandom = "0.3"
rusqlite = { version = "0.32", features = ["bundled"] }
dirs = "6"
unicode-width = "0.2"
argon2 = "0.5"
bip39 = "2"
pbkdf2 = "0.12"
hmac = "0.12"
twox-hash = "2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
toml = "0.8"
thiserror = "2"
zeroize = { version = "1", features = ["derive"] }
rodio = { version = "0.22", default-features = false, features = ["playback", "vorbis"], optional = true }

ratatui = { version = "0.30", optional = true }
crossterm = { version = "0.29", optional = true }
rpassword = { version = "7", optional = true }
clap = { version = "4", features = ["derive", "env"], optional = true }
nucleo-matcher = "0.3"

[dev-dependencies]
tempfile = "3"
trybuild = "1"
